objects/L2I_Custom_Model__mdt.object
<CustomObject>
    <description>Stores models to be used with the customList LWC.</description>
    <fields>
        <fullName>L2I_Column_API_Names__c</fullName>
        <description>Comma delimmited list of the column names to display on the custom list component.</description>
        <inlineHelpText>Comma delimmited list of the column names to display on the custom list component.</inlineHelpText>
        <label>L2I Column API Names</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_JSON_Field_API_Name__c</fullName>
        <label>L2I JSON Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_JSON_Flag_Field_API_Name__c</fullName>
        <description>Denotes the API name of the field on the parent object, where that field serves as a flag denoting whether JSON is applicable or not. Useful for formula fields since formula fields cannot parse long text area fields.</description>
        <inlineHelpText>Denotes the API name of the field on the parent object, where that field serves as a flag denoting whether JSON is applicable or not. Useful for formula fields since formula fields cannot parse long text area fields.</inlineHelpText>
        <label>L2I JSON Flag Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Lower_Bound__c</fullName>
        <description>Lower Bound, set on a given Rate Schedule tier. LEAVE BLANK, this field is used on the backend for a custom data structure.</description>
        <inlineHelpText>Lower Bound, set on a given Rate Schedule tier. LEAVE BLANK, this field is used on the backend for a custom data structure.</inlineHelpText>
        <label>Lower Bound</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Parent__c</fullName>
        <description>18 character Id representing the parent record. LEAVE BLANK, this field is used on the backend for a custom data structure.</description>
        <inlineHelpText>18 character Id representing the parent record. LEAVE BLANK, this field is used on the backend for a custom data structure.</inlineHelpText>
        <label>L2I Parent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Per_Unit_Price__c</fullName>
        <description>Per Unit Price, set on a given Rate Schedule tier. LEAVE BLANK, this field is used on the backend for a custom data structure.</description>
        <inlineHelpText>Per Unit Price, set on a given Rate Schedule tier. LEAVE BLANK, this field is used on the backend for a custom data structure.</inlineHelpText>
        <label>Per Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Product_Id__c</fullName>
        <description>Product Id, set on a given Rate Schedule tier. LEAVE BLANK, this field is used on the backend for a custom data structure.</description>
        <inlineHelpText>Product Id, set on a given Rate Schedule tier. LEAVE BLANK, this field is used on the backend for a custom data structure.</inlineHelpText>
        <label>L2I Product_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Shadow_Product_Code__c</fullName>
        <description>Product2 Product Code that will be used to locate the Order Item that will serve as the template for the shadow order product.</description>
        <inlineHelpText>Product2 Product Code that will be used to locate the Order Item that will serve as the template for the shadow order product.</inlineHelpText>
        <label>Shadow Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Shadow_Product_Id__c</fullName>
        <description>When applicable, stores the id of a shadow product at the JSON tier. LEAVE BLANK, this field is used on the backend for a custom data structure.</description>
        <inlineHelpText>When applicable, stores the id of a shadow product at the JSON tier. LEAVE BLANK, this field is used on the backend for a custom data structure.</inlineHelpText>
        <label>L2I Shadow Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Source_Order_Product_Ids__c</fullName>
        <description>When a shadow Order Product summarizes several Order Products, this field stores a delimited string of the source Order Products Ids in which the shadow Order Product summarizes. LEAVE BLANK, this field is used on the backend for a custom data structure.</description>
        <inlineHelpText>When a shadow Order Product summarizes several Order Products, this field stores a delimited string of the source Order Products Ids in which the shadow Order Product summarizes. LEAVE BLANK, this field is used on the backend for a custom data structure.</inlineHelpText>
        <label>L2I Source Order Product Ids</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Upper_Bound__c</fullName>
        <description>Upper Bound, set on a given Rate Schedule tier. LEAVE BLANK, this field is used on the backend for a custom data structure.</description>
        <inlineHelpText>Upper Bound, set on a given Rate Schedule tier. LEAVE BLANK, this field is used on the backend for a custom data structure.</inlineHelpText>
        <label>Upper Bound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Custom Model</label>
    <pluralLabel>Custom Models</pluralLabel>
</CustomObject>